tests/parser/arguments_as_identifier/test.m.octave.out
In test.m, line 2
|    arguments % keyword
|    ^^^^^^^^^ style: end statement with a semicolon [end_of_statements]
In test.m, line 3
|       x uint
|         ^^^^ style: end statement with a semicolon [end_of_statements]
In test.m, line 5
|    try
|    ^^^ error: expected end of file, found KEYWORD instead
MISS_HIT Debug Summary: 1 file(s) analysed, 2 style issue(s), 1 error(s)
